--- a/public/index.html
+++ b/public/index.html
@@ -91,53 +91,42 @@
             <a href="https://play.google.com/store/apps/details?id=com.snapchat.android&hl=fr&gl=US"><i class="fab fa-snapchat-ghost">
             </i></a>
             <a href="https://www.whatsapp.com/?lang=fr"><i class="fab fa-whatsapp"></i></a>
+            <h2 class="mannequins text-center">mannequins</h2>
         </div>
 
+        <div class="container">
+            <div class=" section1 m-auto">
+                <div class="row col-12 m-auto">
+                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                </div>
 
-        <section class="section">
-            <div class="row m-auto">
-                <h2 class="mannequins my-5 text-center">mannequins</h2>
+                <div class="row d-flex">
+                    <div class="col-6 col-md-6 col-sm-12 rapha">
+                        <div class="m-auto ">
+                            <h3 class="m-5 text-center fs-1">Raphaëlle</h3>
+                            <p>Taille : 184cm</p>
+                            <p>Poitrine : 80 cm</p>
+                            <p>Poids : 54 cm</p>
+                            <p>Hanches 80 cm</p>
+                            <p>Cheveux : Blond</p>
+                            <p>Yeux : Bleux</p>
+                            <p>Pointure : 37</p>
+                        </div>
+
+                    </div>
+                    <div class="col-6 col-md-6 col-sm-12">
+                        <img src="img/rapha45.jpg" alt="" class="img-fluid img">
+                    </div>
+                </div>
+
+                <!-- <div class="row col-12 m-auto">
+                    <div class="col-lg-12 col-md-12 col-sm-12 p-5 text-center m-auto">
+                        <button type="button" class="btn fs-2 p-2 bouton"><a href="#" class="retour text-decoration-none text-white px-5 my-3">Retour</a></button>
+                    </div>
+                </div> -->
             </div>
-            <div class="row col-12 d-flex">
-                <div class="col-lg-6 col-md-6 col-sm-12 d-flex">
-                    <img src="img/accueil1.jpg" alt="" class="img-fluid">
-                    <h4 class="noms"><a href="#">Justine</a></h4>
 
-                </div>
-                <div class="row col-12 d-flex">
-                    <div class="col-lg-3 col-md-6 col-sm-12 d-flex">
-                        <img src="img/accueil1.jpg" alt="" class="img-fluid">
-                        <h4 class="noms"><a href="#">Justine</a></h4>
-                        <img src="img/accueil1.jpg" alt="" class="img-fluid">
-                        <h3 class="noms"><a href="#">Lamia</a></h3>
-                    </div>
-                </div>
-                <div class="row col-12 d-flex">
-                    <div class="col-lg-3 col-md-6 col-sm-12 d-flex">
-                        <h4 class="noms"><a href="#">Patrick</a></h4>
-                        <img src="img/accueil1.jpg" alt="" class="img-fluid">
-                        <h4 class="noms"><a href="#">Raphaëlle</a></h4>
-                        <img src="img/accueil1.jpg" alt="" class="img-fluid">
-                    </div>
-                </div>
-                <div class="row col-12 d-flex">
-                    <div class="col-lg-3 col-md-6 col-sm-12 d-flex">
-                        <img src="img/accueil1.jpg" alt="" class="img-fluid">
-                        <h4 class="noms"><a href="#">latifa</a></h4>
-                        <img src="img/accueil1.jpg" alt="" class="img-fluid">
-                        <h4 class="noms"><a href="#">Barbara</a></h4>
-                    </div>
-                </div>
-                <div class="row col-12 d-flex d-flex">
-                    <div class="col-lg-3 col-md-6 col-sm-12 d-flex">
-                        <h4 class="noms"><a href="#">mélodie</a></h4>
-                        <img src="img/accueil1.jpg" alt="" class="img-fluid">
-                        <h4 class="noms"><a href="#">daniele</a></h4>
-                        <img src="img/accueil1.jpg" alt="" class="img-fluid">
-                    </div>
-                </div>
-        </section>
-
+        </div>
 
     </main>
     <!-- FIN MAIN -->
