--- a/public/index.html
+++ b/public/index.html
@@ -51,13 +51,8 @@
                                     <li class="nav-item">
                                         <a class="nav-link" aria-current="page" href="#accueil">accueil</a>
                                     </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#mannequins" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">mannequins</a>
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                            <li><a class="dropdown-item" href="#">Action</a></li>
-                                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                        </ul>
+                                    <li class="nav-item">
+                                        <a class="nav-link" aria-current="page" href="#mannequins">mannequins</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" aria-current="page" href="#propos">à propos</a>
@@ -91,7 +86,7 @@
             <a href="https://play.google.com/store/apps/details?id=com.snapchat.android&hl=fr&gl=US"><i class="fab fa-snapchat-ghost">
             </i></a>
             <a href="https://www.whatsapp.com/?lang=fr"><i class="fab fa-whatsapp"></i></a>
-            <h2 class="mannequins text-center">mannequins</h2>
+            <h2 class="text-center" id="mannequins">mannequins</h2>
         </div>
 
         <div class="container">
@@ -125,8 +120,31 @@
                     </div>
                 </div> -->
             </div>
-
         </div>
+
+
+
+
+
+        <!-- CONTAINER MAIN -->
+        <section class="container">
+            <div class="row col-12 m-auto d-flex section2">
+                <h2 class="text-center" id="postule">postuler à l'agence mariam</h2>
+                <div class="col-lg-6 col-md-12 col-sm-12 ">
+                    <div class="propos">
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est! Lorem
+                            ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est! Lorem
+                            ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 ">
+
+                    <img src="img/Paris.jpg" alt="" class=" img-fluid img ">
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <!-- FIN MAIN -->
