--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
             <div class="row m-auto">
                 <div class="col-lg-12 col-md-12 col-sm-12 m-auto">
                     <!-- NAV -->
-                    <nav class="navbar navbar-expand-lg nav-menu m-auto">
+                    <nav class="navbar navbar-expand-lg nav-menu m-auto fixed-top bg-black">
                         <div class="container-fluid">
                             <h1 class="navbar-brand">agence mariam</h1>
                             <button class="navbar-toggler bouton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
