--- a/public/index.html
+++ b/public/index.html
@@ -89,8 +89,11 @@
             <h2 class="text-center" id="mannequins">mannequins</h2>
         </div>
 
+        <!-- CONTAINER MAIN -->
         <div class="container">
-            <div class=" section1 m-auto">
+
+            <!-- SECTION 1 -->
+            <section class=" section1 m-auto">
                 <div class="row col-12 m-auto">
                     <div class="col-12 col-md-12 col-sm-12 connectées"></div>
                 </div>
@@ -113,39 +116,58 @@
                         <img src="img/rapha45.jpg" alt="" class="img-fluid img">
                     </div>
                 </div>
+            </section>
+            <!-- FIN SECTION 1 -->
 
-                <!-- <div class="row col-12 m-auto">
-                    <div class="col-lg-12 col-md-12 col-sm-12 p-5 text-center m-auto">
-                        <button type="button" class="btn fs-2 p-2 bouton"><a href="#" class="retour text-decoration-none text-white px-5 my-3">Retour</a></button>
+            <!-- SECTION 2 -->
+            <section class=" section2 m-auto">
+                <div class="row col-12 m-auto">
+                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                </div>
+
+                <div class="row d-flex">
+                    <div class="col-6 col-md-6 col-sm-12 lamia">
+                        <div class="m-auto ">
+                            <h3 class="m-5 text-center fs-1">Lamia</h3>
+                            <p>Taille : 187cm</p>
+                            <p>Poitrine : 85 cm</p>
+                            <p>Poids : 59 cm</p>
+                            <p>Hanches 87 cm</p>
+                            <p>Cheveux : Noirs</p>
+                            <p>Yeux : Beaux</p>
+                            <p>Pointure : 39</p>
+                        </div>
+
                     </div>
-                </div> -->
-            </div>
+                    <div class="col-6 col-md-6 col-sm-12">
+                        <img src="img/lamia1.jpg" alt="" class="">
+                    </div>
+                </div>
+            </section>
+            <!-- FIN SECTION 2 -->
+
+            <!--  SECTION 10 -->
+            <section class="section10">
+                <div class="row col-12 m-auto d-flex">
+                    <h2 class="text-center" id="postule">postuler à l'agence mariam</h2>
+                    <div class="col-lg-6 col-md-12 col-sm-12 ">
+                        <div class="propos">
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 ">
+
+                        <img src="img/Paris.jpg" alt="" class=" img-fluid img ">
+                    </div>
+                </div>
+            </section>
+            <!--  FIN SECTION 10 -->
+
         </div>
-
-
-
-
-
         <!-- CONTAINER MAIN -->
-        <section class="container">
-            <div class="row col-12 m-auto d-flex section2">
-                <h2 class="text-center" id="postule">postuler à l'agence mariam</h2>
-                <div class="col-lg-6 col-md-12 col-sm-12 ">
-                    <div class="propos">
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est! Lorem
-                            ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est! Lorem
-                            ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 ">
-
-                    <img src="img/Paris.jpg" alt="" class=" img-fluid img ">
-                </div>
-            </div>
-
-        </section>
-
     </main>
     <!-- FIN MAIN -->
 
