--- a/public/index.html
+++ b/public/index.html
@@ -146,46 +146,39 @@
             </section>
             <!-- FIN SECTION 2 -->
 
-            <!--  SECTION 10 -->
-            <section class="section10">
-                <div class="row col-12 m-auto d-flex">
-                    <h2 class="text-center" id="postule">postuler à l'agence mariam</h2>
-                    <div class="col-lg-6 col-md-12 col-sm-12 ">
-                        <div class="propos">
-                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
-                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12 ">
+            <!-- SECTION 3 -->
+            <section class=" section3 m-auto">
+                <div class="row col-12 m-auto">
+                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                </div>
 
-                        <img src="img/Paris.jpg" alt="" class=" img-fluid img ">
+                <div class="row d-flex">
+                    <div class="col-6 col-md-6 col-sm-12 justine">
+                        <div class="m-auto ">
+                            <h3 class="m-5 text-center fs-1">Justine</h3>
+                            <p>Taille : 185cm</p>
+                            <p>Poitrine : 83 cm</p>
+                            <p>Poids : 55 cm</p>
+                            <p>Hanches 85 cm</p>
+                            <p>Cheveux : Noirs</p>
+                            <p>Yeux : Beaux</p>
+                            <p>Pointure : 38</p>
+                        </div>
+
+                    </div>
+                    <div class="col-6 col-md-6 col-sm-12">
+                        <img src="img/just1.jpg" alt="" class="">
                     </div>
                 </div>
             </section>
-            <!--  FIN SECTION 10 -->
+            <!-- FIN SECTION 3 -->
 
-        </div>
-        <!-- CONTAINER MAIN -->
-    </main>
-    <!-- FIN MAIN -->
 
-    <!-- FOOTER -->
-    <footer>
-        <div class="container-fluid">
-            <div>
-                <p class="para1 m-5"><span>Mentions légales</span> <span>Politique en matière de cookies</span> <span>Politique de confidentialité</span> <span>Conditions d'utilisation</span> </p>
-                <p class="text-center mt-3 copy">&copy; 2022 Agence Mariam Paris</p>
-            </div>
-        </div>
-    </footer>
+            <!-- Option 1: Bootstrap Bundle with Popper -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Mon JS -->
-    <script src="../js/portfolio.js"></script>
+            <!-- Mon JS -->
+            <script src="../js/portfolio.js"></script>
 </body>
 
 </html>
