--- a/public/index.html
+++ b/public/index.html
@@ -173,6 +173,34 @@
             </section>
             <!-- FIN SECTION 3 -->
 
+            <!-- SECTION 4 -->
+            <section class=" section4 m-auto">
+                <div class="row col-12 m-auto">
+                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                </div>
+
+                <div class="row d-flex">
+                    <div class="col-6 col-md-6 col-sm-12 patrick">
+                        <div class="m-auto ">
+                            <h3 class="m-5 text-center fs-1">Patrick</h3>
+                            <p>Taille : 197cm</p>
+                            <p>Poitrine : 97 cm</p>
+
+                            <p>Hanches 78 cm</p>
+                            <p>Cheveux : Noirs</p>
+                            <p>Yeux : Revolvers</p>
+                            <p>Pointure : 43</p>
+                        </div>
+
+                    </div>
+                    <div class="col-6 col-md-6 col-sm-12">
+                        <img src="img/patrick1.jpg" alt="" class="">
+                    </div>
+                </div>
+            </section>
+            <!-- FIN SECTION 4 -->
+
+
 
             <!-- Option 1: Bootstrap Bundle with Popper -->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
