--- a/public/index.html
+++ b/public/index.html
@@ -200,6 +200,33 @@
             </section>
             <!-- FIN SECTION 4 -->
 
+            <!-- SECTION 5 -->
+            <section class=" section5 m-auto">
+                <div class="row col-12 m-auto">
+                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                </div>
+
+                <div class="row d-flex">
+                    <div class="col-6 col-md-6 col-sm-12 barbara">
+                        <div class="m-auto ">
+                            <h3 class="m-5 text-center fs-1">Barbara</h3>
+                            <p>Taille : 180cm</p>
+                            <p>Poitrine : 80 cm</p>
+                            <p>Poids : 55 cm</p>
+                            <p>Hanches 80 cm</p>
+                            <p>Cheveux : Noirs</p>
+                            <p>Yeux : Beaux</p>
+                            <p>Pointure : 38</p>
+                        </div>
+
+                    </div>
+                    <div class="col-6 col-md-6 col-sm-12">
+                        <img src="img/barbara1.jpg" alt="" class="">
+                    </div>
+                </div>
+            </section>
+            <!-- FIN SECTION 5 -->
+
 
 
             <!-- Option 1: Bootstrap Bundle with Popper -->
