--- a/public/index.html
+++ b/public/index.html
@@ -227,6 +227,32 @@
             </section>
             <!-- FIN SECTION 5 -->
 
+            <!-- SECTION 6 -->
+            <section class=" section6 m-auto">
+                <div class="row col-12 m-auto">
+                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                </div>
+
+                <div class="row d-flex">
+                    <div class="col-6 col-md-6 col-sm-12 latifa">
+                        <div class="m-auto ">
+                            <h3 class="m-5 text-center fs-1">Latifa</h3>
+                            <p>Taille : 185cm</p>
+                            <p>Poitrine : 83 cm</p>
+                            <p>Poids : 55 cm</p>
+                            <p>Hanches 85 cm</p>
+                            <p>Cheveux : Noirs</p>
+                            <p>Yeux : Beaux</p>
+                            <p>Pointure : 38</p>
+                        </div>
+
+                    </div>
+                    <div class="col-6 col-md-6 col-sm-12">
+                        <img src="img/lat.jpg" alt="" class="">
+                    </div>
+                </div>
+            </section>
+            <!-- FIN SECTION 6 -->
 
 
             <!-- Option 1: Bootstrap Bundle with Popper -->
