--- a/public/index.html
+++ b/public/index.html
@@ -254,6 +254,33 @@
             </section>
             <!-- FIN SECTION 6 -->
 
+            <!-- SECTION 7 -->
+            <section class=" section7 m-auto">
+                <div class="row col-12 m-auto">
+                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                </div>
+
+                <div class="row d-flex">
+                    <div class="col-6 col-md-6 col-sm-12 melodie">
+                        <div class="m-auto ">
+                            <h3 class="m-5 text-center fs-1">Mélodie</h3>
+                            <p>Taille : 188cm</p>
+                            <p>Poitrine : 84 cm</p>
+                            <p>Poids : 54 cm</p>
+                            <p>Hanches 83 cm</p>
+                            <p>Cheveux : Noirs</p>
+                            <p>Yeux : Beaux</p>
+                            <p>Pointure : 38</p>
+                        </div>
+
+                    </div>
+                    <div class="col-6 col-md-6 col-sm-12">
+                        <img src="img/mel3.jpg" alt="" class="">
+                    </div>
+                </div>
+            </section>
+            <!-- FIN SECTION 7 -->
+
 
             <!-- Option 1: Bootstrap Bundle with Popper -->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
