--- a/public/index.html
+++ b/public/index.html
@@ -281,6 +281,33 @@
             </section>
             <!-- FIN SECTION 7 -->
 
+            <!-- SECTION 8 -->
+            <section class=" section8 m-auto">
+                <div class="row col-12 m-auto">
+                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                </div>
+
+                <div class="row d-flex">
+                    <div class="col-6 col-md-6 col-sm-12 daniele">
+                        <div class="m-auto ">
+                            <h3 class="m-5 text-center fs-1">Daniele</h3>
+                            <p>Taille : 199cm</p>
+                            <p>Poitrine : 95 cm</p>
+                            <p>Hanches 90 cm</p>
+                            <p>Cheveux : Noirs</p>
+                            <p>Yeux : Foudroyant</p>
+                            <p>Pointure : 44</p>
+                        </div>
+
+                    </div>
+                    <div class="col-6 col-md-6 col-sm-12">
+                        <img src="img/dan.jpg" alt="" class="">
+                    </div>
+                </div>
+            </section>
+            <!-- FIN SECTION 8 -->
+
+
 
             <!-- Option 1: Bootstrap Bundle with Popper -->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
