--- a/public/index.html
+++ b/public/index.html
@@ -307,6 +307,25 @@
             </section>
             <!-- FIN SECTION 8 -->
 
+            <!--  SECTION 9 -->
+            <section class="section9">
+                <div class="row col-12 m-auto d-flex">
+                    <h2 class="text-center" id="postule">à propos</h2>
+                    <div class="col-lg-6 col-md-12 col-sm-12 ">
+                        <div class="propos">
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <img src="img/Paris.jpg" alt="" class=" img-fluid img ">
+                    </div>
+                </div>
+            </section>
+            <!--  FIN SECTION 9 -->
+
 
 
             <!-- Option 1: Bootstrap Bundle with Popper -->
