--- a/public/index.html
+++ b/public/index.html
@@ -326,6 +326,30 @@
             </section>
             <!--  FIN SECTION 9 -->
 
+            <!--  SECTION 10 -->
+            <section class="row col-12 m-auto section10">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <h2 class="text-center">postuler à l'agence mariam</h2>
+                    <h3>critères</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat quam blanditiis voluptas sapiente pariatur animi iste cupiditate rerum deserunt labore, laboriosam ex quia aliquid omnis distinctio nihil ad quis.</p>
+                    <h3>conseil</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat quam blanditiis voluptas sapiente pariatur animi iste cupiditate rerum deserunt labore, laboriosam ex quia aliquid omnis distinctio nihil ad quis.</p>
+                    <h3>avertissement</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat quam blanditiis voluptas sapiente pariatur animi iste cupiditate rerum deserunt labore, laboriosam ex quia aliquid omnis distinctio nihil ad quis.</p>
+                    <div class="book">
+                        <h3 id="book">envoyer votre book</h3>
+                        <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur exercitationem ipsam voluptatibus quia eos delectus! Earum debitis, fugiat unde dignissimos illum laborum dolor odio eligendi mollitia minima quisquam voluptatemsaepe.</p>
+                        <p class="m-3">Veuillez soumettre vos photos en les envoyant à : Info@monsite.fr</p>
+                        <h3 id="appels">
+                            appels
+                        </h3>
+                        <p class="text-center"> +33 00 00 00 </p>
+                        <p class="text-center">Lundi au jeudi : 14:00 - 17:00</p>
+                    </div>
+                </div>
+            </section>
+            <!--  FIN SECTION 10 -->
+
 
 
             <!-- Option 1: Bootstrap Bundle with Popper -->
