--- a/public/index.html
+++ b/public/index.html
@@ -350,13 +350,63 @@
             </section>
             <!--  FIN SECTION 10 -->
 
+            <!--  FIN SECTION 11 -->
+            <div class="row col-12 m-auto section11 d-flex">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="contact m-auto">
+                        <h2 class="text-center">contactez nous</h2>
+                        <h3>adressse</h3>
+                        <p>Agence Mariam</p>
+                        <P>Paris</P>
+                    </div>
+                    <div class="contact m-auto">
+                        <h3>pour plus d'infos</h3>
+                        <P>+33 00 00 00</P>
+                        <p>info@monsite.fr</p>
+                    </div>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 d-flex section">
+                    <div class="contact m-auto">
+                        <h3>réserver</h3>
+                        <P>+33 00 00 00</P>
+                        <p>info@monsite.fr</p>
+                    </div>
+                    <div class="contact m-auto">
+                        <h3>Devenir mannequin</h3>
+                        <P>Pour postuler</P>
+                        <p><a href="#">Cliquer ici</a></p>
+                    </div>
+                </div>
+
+                <div class="col-lg-12 col-md-12 col-sm-12 d-flex section ">
+                    <div class="newletter m-auto text-dark">
+                        <h3>S'abonner à notre newletter</h3>
+                        <p class="text-center">Pour recevoir les dernières nouvelles, éditoriaux, campagnes et plus
+                        </p>
+                        <form class="m-auto text-center mb-5">
+                            <label for="email" class="ml-5 text-start">E-mail <br>
+                                <input type="email" id="email" name="email" class="input border-1 border-bottom">
+                            </label>
+                            <button class="text-white btn bg-black me-md-2 mb-3" type="button">Button</button>
+
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!--  FIN SECTION 11 -->
+
+        </div>
+        <!-- CONTAINER MAIN -->
+    </main>
+    <!-- FIN MAIN -->
 
 
-            <!-- Option 1: Bootstrap Bundle with Popper -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-            <!-- Mon JS -->
-            <script src="../js/portfolio.js"></script>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Mon JS -->
+    <script src="../js/portfolio.js"></script>
 </body>
 
 </html>
