--- a/public/index.html
+++ b/public/index.html
@@ -400,7 +400,16 @@
     </main>
     <!-- FIN MAIN -->
 
-
+    <!-- FOOTER -->
+    <footer>
+        <div class="container-fluid">
+            <div>
+                <p class="para1 m-5"><span>Mentions légales</span> <span>Politique en matière de cookies</span> <span>Politique de confidentialité</span> <span>Conditions d'utilisation</span> </p>
+                <p class="text-center mt-3 copy">&copy; 2022 Agence Mariam Paris</p>
+            </div>
+        </div>
+    </footer>
+    <!-- FIN FOOTER -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
