--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,6 @@
     <link rel="stylesheet" href="../public/css/style.css">
 
     <title>Agence Mariam</title>
-
 </head>
 
 <body id="accueil">
@@ -311,15 +310,15 @@
             <section class="section9">
                 <div class="row col-12 m-auto d-flex">
                     <h2 class="text-center" id="postule">à propos</h2>
-                    <div class="col-lg-6 col-md-12 col-sm-12 ">
+                    <div class="col-lg-6 col-md-6 col-sm-12 ">
                         <div class="propos">
                             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis!</P>
                             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolor omnis laboriosam, consectetur maiores laborum, doloribus quasi numquam libero, dolores id vitae veniam eveniet aliquam quaerat error architecto itaque est!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque blanditiis itaque quas laborum maxime rerum veritatis, harum autem corporis voluptate non numquam!</P>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, qui corrupti. Distinctio quaerat iusto accusamus enim atque!</P>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                         <img src="img/Paris.jpg" alt="" class=" img-fluid img ">
                     </div>
                 </div>
@@ -338,7 +337,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat quam blanditiis voluptas sapiente pariatur animi iste cupiditate rerum deserunt labore, laboriosam ex quia aliquid omnis distinctio nihil ad quis.</p>
                     <div class="book">
                         <h3 id="book">envoyer votre book</h3>
-                        <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur exercitationem ipsam voluptatibus quia eos delectus! Earum debitis, fugiat unde dignissimos illum laborum dolor odio eligendi mollitia minima quisquam voluptatemsaepe.</p>
+                        <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur exercitationem ipsam voluptatibus quia eos delectus! Earum debitis, fugiat unde dignissimos illum laborum dolor odio eligendi mollitia minima quisquam voluptatemsaepe.</p>
                         <p class="m-3">Veuillez soumettre vos photos en les envoyant à : Info@monsite.fr</p>
                         <h3 id="appels">
                             appels
@@ -365,16 +364,16 @@
                         <p>info@monsite.fr</p>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 d-flex section">
+                <div class="col-lg-12 col-md-12 col-sm-12 d-flex">
                     <div class="contact m-auto">
-                        <h3>réserver</h3>
+                        <h3 class="para">réserver</h3>
                         <P>+33 00 00 00</P>
                         <p>info@monsite.fr</p>
                     </div>
                     <div class="contact m-auto">
-                        <h3>Devenir mannequin</h3>
-                        <P>Pour postuler</P>
-                        <p><a href="#">Cliquer ici</a></p>
+                        <h3 class="para">Devenir mannequin</h3>
+                        <P class="text-center">Pour postuler</P>
+                        <p class="text-center"><a href="#">Cliquer ici</a></p>
                     </div>
                 </div>
 
@@ -387,7 +386,7 @@
                             <label for="email" class="ml-5 text-start">E-mail <br>
                                 <input type="email" id="email" name="email" class="input border-1 border-bottom">
                             </label>
-                            <button class="text-white btn bg-black me-md-2 mb-3" type="button">Button</button>
+                            <button class="text-white btn bg-black me-md-2 mb-3" type="button">Envoyer</button>
 
                         </form>
                     </div>
@@ -404,8 +403,8 @@
     <footer>
         <div class="container-fluid">
             <div>
-                <p class="para1 m-5"><span>Mentions légales</span> <span>Politique en matière de cookies</span> <span>Politique de confidentialité</span> <span>Conditions d'utilisation</span> </p>
-                <p class="text-center mt-3 copy">&copy; 2022 Agence Mariam Paris</p>
+                <p class="para1 text-center"><span>Mentions légales</span> <span>Politique en matière de cookies</span> <span>Politique de confidentialité</span> <span>Conditions d'utilisation</span> </p>
+                <p class="text-center copy">&copy; 2022 Agence Mariam Paris</p>
             </div>
         </div>
     </footer>
