--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
             <!-- SECTION 1 -->
             <section class=" section1 m-auto">
                 <div class="row col-12 m-auto">
-                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                    <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
                 <div class="row d-flex">
@@ -121,7 +121,7 @@
             <!-- SECTION 2 -->
             <section class=" section2 m-auto">
                 <div class="row col-12 m-auto">
-                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                    <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
                 <div class="row d-flex">
@@ -148,7 +148,7 @@
             <!-- SECTION 3 -->
             <section class=" section3 m-auto">
                 <div class="row col-12 m-auto">
-                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                    <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
                 <div class="row d-flex">
@@ -175,7 +175,7 @@
             <!-- SECTION 4 -->
             <section class=" section4 m-auto">
                 <div class="row col-12 m-auto">
-                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                    <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
                 <div class="row d-flex">
@@ -202,7 +202,7 @@
             <!-- SECTION 5 -->
             <section class=" section5 m-auto">
                 <div class="row col-12 m-auto">
-                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                    <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
                 <div class="row d-flex">
@@ -229,7 +229,7 @@
             <!-- SECTION 6 -->
             <section class=" section6 m-auto">
                 <div class="row col-12 m-auto">
-                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                    <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
                 <div class="row d-flex">
@@ -256,7 +256,7 @@
             <!-- SECTION 7 -->
             <section class=" section7 m-auto">
                 <div class="row col-12 m-auto">
-                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                    <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
                 <div class="row d-flex">
@@ -283,7 +283,7 @@
             <!-- SECTION 8 -->
             <section class=" section8 m-auto">
                 <div class="row col-12 m-auto">
-                    <div class="col-12 col-md-12 col-sm-12 connectées"></div>
+                    <div class="col-12 col-md-12 col-sm-12 connectees"></div>
                 </div>
 
                 <div class="row d-flex">
