--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
                         </div>
 
                     </div>
-                    <div class="col-6 col-md-6 col-sm-12">
+                    <div class="col-6 col-md-6 col-sm-12 img-container">
                         <img src="img/rapha45.jpg" alt="" class="img-fluid img">
                     </div>
                 </div>
@@ -338,11 +338,11 @@
                     <div class="book">
                         <h3 id="book">envoyer votre book</h3>
                         <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur exercitationem ipsam voluptatibus quia eos delectus! Earum debitis, fugiat unde dignissimos illum laborum dolor odio eligendi mollitia minima quisquam voluptatemsaepe.</p>
-                        <p class="m-3">Veuillez soumettre vos photos en les envoyant à : Info@monsite.fr</p>
+                        <p class="m-3">Veuillez soumettre vos photos en les envoyant à : m.ouedaogo7526@gmail.com</p>
                         <h3 id="appels">
                             appels
                         </h3>
-                        <p class="text-center"> +33 00 00 00 </p>
+                        <p class="text-center"> +33 7 53 32 95 26 </p>
                         <p class="text-center">Lundi au jeudi : 14:00 - 17:00</p>
                     </div>
                 </div>
@@ -350,30 +350,30 @@
             <!--  FIN SECTION 10 -->
 
             <!--  FIN SECTION 11 -->
-            <div class="row col-12 m-auto section11 d-flex">
+            <div class="row col-12 section11 d-flex">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="contact m-auto">
                         <h2 class="text-center">contactez nous</h2>
                         <h3>adressse</h3>
-                        <p>Agence Mariam</p>
-                        <P>Paris</P>
+                        <p class="text-center">Agence Mariam</p>
+                        <P class="text-center">Paris</P>
                     </div>
                     <div class="contact m-auto">
                         <h3>pour plus d'infos</h3>
-                        <P>+33 00 00 00</P>
-                        <p>info@monsite.fr</p>
+                        <P class="text-center">+33 7 53 32 95 26</P>
+                        <p class="text-center">m.ouedaogo7526@gmail.com</p>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 d-flex">
-                    <div class="contact m-auto">
-                        <h3 class="para">réserver</h3>
-                        <P>+33 00 00 00</P>
-                        <p>info@monsite.fr</p>
+                <div class="col-lg-12 col-md-12 col-sm-12 d-flex m-auto column">
+                    <div class="contact ">
+                        <h3 class="para ">réserver</h3>
+                        <P class="text-center">+33 7 53 32 95 26</P>
+                        <p class="text-center">m.ouedaogo7526@gmail.com</p>
                     </div>
-                    <div class="contact m-auto">
+                    <div class="contact ">
                         <h3 class="para">Devenir mannequin</h3>
-                        <P class="text-center">Pour postuler</P>
-                        <p class="text-center"><a href="#">Cliquer ici</a></p>
+                        <P class="infos text-center">Pour postuler</P>
+                        <p class="infos text-center"><a href="#">Cliquer ici</a></p>
                     </div>
                 </div>
 
